# ChangeLog for net-im/silc-toolkit
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/silc-toolkit/ChangeLog,v 1.37 2004/12/29 03:12:23 ciaranm Exp $

  29 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  17 Dec 2004; Markus Rothe <corsair@gentoo.org>
  silc-toolkit-0.9.12-r3.ebuild:
  Stable on ppc64

  15 Nov 2004; Markus Rothe <corsair@gentoo.org>
  silc-toolkit-0.9.12-r3.ebuild:
  Marked ~ppc64; bug #58170

  21 Oct 2004; Hardave Riar <hardave@gentoo.org>
  silc-toolkit-0.9.12-r3.ebuild:
  Stable on mips, bug #68271.

  05 Oct 2004; Guy Martin <gmsoft@gentoo.org> silc-toolkit-0.9.12-r3.ebuild:
  Stable on hppa.

  03 Oct 2004; Bryan Østergaard <kloeri@gentoo.org>
  silc-toolkit-0.9.12-r3.ebuild:
  Stable on alpha.

  03 Oct 2004; Jason Wever <weeve@gentoo.org> silc-toolkit-0.9.12-r3.ebuild:
  Stable on sparc.

  02 Oct 2004; Jeremy Huddleston <eradicator@gentoo.org>
  silc-toolkit-0.9.12-r3.ebuild:
  Stable amd64.

  29 Sep 2004; Andrej Kacian <ticho@gentoo.org>
  silc-toolkit-0.9.12-r3.ebuild:
  Stable on x86.

  18 Sep 2004; Sven Wegener <swegener@gentoo.org>
  silc-toolkit-0.9.12-r3.ebuild:
  Changed order of sed scripts to avoid running automake at compile time. Closes
  bug 64495.

  17 Sep 2004; Andrej Kacian <ticho@gentoo.org> silc-toolkit-0.9.12-r3.ebuild:
  Modify install location of tutorial files also in Makefile.am, since on some
  systems (amd64 reported this so far), the build process seems to start over
  and recreate Makefile .in from .am. Thanks to Jocelyn Mayer
  <l_indien@magic.fr> for the report and following fix (bug #63089).

*silc-toolkit-0.9.12-r3 (05 Sep 2004)

  05 Sep 2004; Andrej Kacian <ticho@gentoo.org> silc-toolkit-0.9.12-r3.ebuild:
  Fixed install locations.

  05 Sep 2004; Andrej Kacian <ticho@gentoo.org> :
  Install /usr/lib/pkgconfig/silc.pc, as some packages will need it soon. Next