@@ -1,6 +1,6 @@
-# Copyright 1999-2004 Gentoo Foundation
+# Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/silc-toolkit/silc-toolkit-0.9.12-r2.ebuild,v 1.10 2004/10/20 18:32:28 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/silc-toolkit/silc-toolkit-0.9.12-r2.ebuild,v 1.11 2005/02/18 17:34:23 slarti Exp $
 
 inherit eutils flag-o-matic
 
