@@ -1,6 +1,10 @@
 # ChangeLog for net-im/silc-toolkit
-# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/silc-toolkit/ChangeLog,v 1.37 2004/12/29 03:12:23 ciaranm Exp $
+# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-im/silc-toolkit/ChangeLog,v 1.38 2005/02/18 17:34:23 slarti Exp $
+
+  18 Feb 2005; Tom Martin <slarti@gentoo.org> silc-toolkit-0.9.12-r3.ebuild:
+  Change amd64 detection code, add libtoolize --copy --force to resolve a
+  ltmain.sh et al version mismatch.
 
   29 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
   Change encoding to UTF-8 for GLEP 31 compliance
